syntax = "proto3";

package gamestate;

// 스킬 타입 enum
enum SkillType {
  SKILL_TYPE_IMPACT = 0;
  SKILL_TYPE_DUMMY_MARBLE = 1;
}

// 벡터 좌표
message Position {
  double x = 1;
  double y = 2;
}

// Entity Shape 관련 메시지들
enum EntityShapeType {
  ENTITY_SHAPE_BOX = 0;
  ENTITY_SHAPE_CIRCLE = 1;
  ENTITY_SHAPE_POLYLINE = 2;
}

message EntityBoxShape {
  EntityShapeType type = 1;
  double width = 2;
  double height = 3;
  double rotation = 4;
}

message EntityCircleShape {
  EntityShapeType type = 1;
  double radius = 2;
}

message PolylinePoint {
  double x = 1;
  double y = 2;
}

message EntityPolylineShape {
  EntityShapeType type = 1;
  double rotation = 2;
  repeated PolylinePoint points = 3;
}

message EntityShape {
  oneof shape {
    EntityBoxShape box_shape = 1;
    EntityCircleShape circle_shape = 2;
    EntityPolylineShape polyline_shape = 3;
  }
}

// Map Entity 상태
message MapEntityState {
  double x = 1;
  double y = 2;
  double angle = 3;
  EntityShape shape = 4;
  double life = 5;
}

// 스킬 효과 기본 정보
message SkillEffectBase {
  string id = 1;
  SkillType type = 2;
  int64 timestamp = 3;
}

// Impact 스킬 효과
message ImpactSkillEffect {
  SkillEffectBase base = 1;
  Position position = 2;
  double radius = 3;
}

// DummyMarble 스킬 효과
message DummyMarbleSkillEffect {
  SkillEffectBase base = 1;
}

// 스킬 효과 (union type)
message SkillEffect {
  oneof effect {
    ImpactSkillEffect impact_effect = 1;
    DummyMarbleSkillEffect dummy_marble_effect = 2;
  }
}

// 구슬 정보
message MarbleDto {
  int32 id = 1;
  string name = 2;
  double x = 3;
  double y = 4;
  // double angle = 5;
  string color = 6;
  double hue = 7;
  bool is_active = 8;
  bool is_dummy = 9;
  double radius = 10;
}

// 게임 상태 (메인 메시지)
message GameStateDto {
  repeated MarbleDto marbles = 1;
  repeated MarbleDto winners = 2;
  optional MarbleDto winner = 3;
  repeated MapEntityState entities = 4;
  bool is_running = 5;
  int32 winner_rank = 6;
  int32 total_marble_count = 7;
  bool shake_available = 8;
  repeated SkillEffect skill_effects = 9;
}
